--- a/src/main/resources/templates/company/add-company.html
+++ b/src/main/resources/templates/company/add-company.html
@@ -5,7 +5,11 @@
 </head>
 <body>
     <h1>Add Company</h1>
-    <form action="/add-company" method="post">
+    <form action="/add-company" th:object="${company}" method="post">
+        <div>
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="id" th:field="*{id}"/>
+        </div>
         <div>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" />
