--- a/src/main/resources/templates/person/person-list.html
+++ b/src/main/resources/templates/person/person-list.html
@@ -13,6 +13,7 @@
     <table>
         <thead>
             <tr>
+                <th>ID</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Middle Name</th>
@@ -21,6 +22,7 @@
         </thead>
         <tbody>
             <tr th:each="person : ${persons}">
+                <td th:text="${person.id}"></td>
                 <td th:text="${person.firstName}"></td>
                 <td th:text="${person.lastName}"></td>
                 <td th:text="${person.middleName}"></td>
