--- a/src/main/resources/templates/company/add-company.html
+++ b/src/main/resources/templates/company/add-company.html
@@ -7,8 +7,8 @@
     <h1>Add Company</h1>
     <form action="/add-company" th:object="${company}" method="post">
         <div>
-            <label for="customerId">ID:</label>
-            <input type="text" id="customerId" name="id" th:field="*{customerId}"/>
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="id" th:field="*{id}"/>
         </div>
         <div>
             <label for="name">Name:</label>
