--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -7,8 +7,8 @@
     <h1>Add Person</h1>
     <form action="/add-person" th:object="${person}" method="post">
         <div>
-            <label for="customerId">ID:</label>
-            <input type="text" id="customerId" th:field="*{customerId}" />
+            <label for="id">ID:</label> <div th:text="${person.id}" style="display: inline;"></div>
+            <input type="text" id="customerId" th:field="*{id}" readonly/>
         </div>
         <div>
             <label for="firstName">First Name:</label>
