--- a/src/main/resources/templates/person/person-list.html
+++ b/src/main/resources/templates/person/person-list.html
@@ -8,16 +8,15 @@
         <a href="/person-list">Person</a>
         <a href="/company-list">Company</a>
     </div>
-    <h1>Person List</h1>
-    <a href="/add-person">Add Person</a>
+   <h1>Person List</h1>
+    <a href="/person/new">Add Person</a>
     <table>
         <thead>
             <tr>
                 <th>ID</th>
-                <th>First Name</th>
+                <th>Name</th>
                 <th>Last Name</th>
-                <th>Middle Name</th>
-                <th>Edit</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -26,7 +25,9 @@
                 <td th:text="${person.firstName}"></td>
                 <td th:text="${person.lastName}"></td>
                 <td th:text="${person.middleName}"></td>
-                <td><a th:href="@{/edit-person/{id}(id=${person.id})}">Edit</a></td>
+                <td>
+                    <a th:href="@{/person/{id}(id=${person.id})}">Edit</a>
+                </td>
             </tr>
         </tbody>
     </table>
